oled change done

--- a/Project.uvprojx
+++ b/Project.uvprojx
@@ -670,6 +670,16 @@
               <FileType>5</FileType>
               <FilePath>.\System\myClaim.h</FilePath>
             </File>
+            <File>
+              <FileName>Menu.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\System\Menu.h</FilePath>
+            </File>
+            <File>
+              <FileName>Menu.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\System\Menu.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
